--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "start": "webpack serve --progress --port 8000",
     "build": "NODE_ENV=production webpack",
-    "build:production": "npm run clean && npm run build && npx cap sync && npm run build:resources",
+    "build:production": "npm run clean && npm run build",
     "build:resources": "mkdir -p resources && cp -R other/designs/android resources && cp -R other/designs/*.png resources && npx cordova-res ios --skip-config --resources resources --copy && npx cordova-res android --skip-config --resources resources --copy",
-    "deploy": "cp other/demo.html build/ && URL=$(vercel --prod -t $VERCEL_TOKEN --yes ./build) && CLEAN_URL=$(echo $URL | sed -r \"s/https:\\/\\/(.*)$/\\1/g\") && DEMO_URL=$(echo $CLEAN_URL | sed -r \"s/(.*\\-)[a-z0-9]+\\-flumens(\\.vercel\\.app)$/\\1${BITRISE_BUILD_NUMBER}\\2/g\") && vercel alias set $CLEAN_URL $DEMO_URL -t $VERCEL_TOKEN && envman add --key DEMO_URL --value \"https://$DEMO_URL\"",
+    "deploy": "URL=$(vercel --prod -t $VERCEL_TOKEN --yes -A ./other/vercel.json ./build) && CLEAN_URL=$(echo $URL | sed -r \"s/https:\\/\\/(.*)$/\\1/g\") && DEMO_URL=$(echo $CLEAN_URL | sed -r \"s/(.*\\-)[a-z0-9]+\\-flumens(\\.vercel\\.app)$/\\1${BITRISE_BUILD_NUMBER}\\2/g\") && vercel alias set $CLEAN_URL $DEMO_URL -t $VERCEL_TOKEN && envman add --key DEMO_URL --value \"https://$DEMO_URL\"",
     "deploy:production": "bitrise run ci",
     "clean": "rm -rf build resources",
     "test": "jest --silent --passWithNoTests",
@@ -21,12 +21,15 @@
     "@capacitor/core": "^5.5.1",
     "@capacitor/device": "5.0.6",
     "@capacitor/filesystem": "^5.1.4",
+    "@capacitor/geolocation": "^5.0.6",
     "@capacitor/ios": "^5.5.1",
     "@capacitor/network": "5.0.6",
     "@capacitor/splash-screen": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@flumens/bigu": "^0.4.0",
-    "@flumens/ionic": "2.0.0-alpha.7",
+    "@flumens/ionic": "2.0.0-alpha.28",
+    "@flumens/tailwind": "^0.6.2",
+    "@heroicons/react": "^2.0.15",
     "@ionic-native/core": "5.36.0",
     "@ionic/core": "^7.5.6",
     "@ionic/react": "^7.5.6",
@@ -46,14 +49,17 @@
     "mobx-react": "7.6.0",
     "mobx-utils": "6.0.8",
     "react": "18.2.0",
+    "react-aria": "^3.30.0",
+    "react-aria-components": "^1.0.1",
     "react-autosuggest": "10.1.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-map-gl": "^7.1.6",
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
-    "swiper": "^11.0.5",
     "react-window": "1.8.9",
+    "swiper": "^11.0.5",
+    "tailwind-variants": "^0.1.20",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -64,19 +70,20 @@
     "@babel/plugin-transform-runtime": "^7.23.4",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
-    "@types/react-window": "^1.8.5",
     "@babel/preset-typescript": "^7.23.3",
     "@capacitor/cli": "^5.5.1",
     "@flumens/eslint-config": "2.0.1",
     "@flumens/prettier-config": "0.2.3",
-    "@flumens/webpack-config": "5.2.0",
+    "@flumens/webpack-config": "5.3.0",
     "@types/jest": "29.5.3",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "@types/react-router": "5.1.20",
     "@types/react-router-dom": "5.3.3",
+    "@types/react-window": "^1.8.5",
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "5.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "cordova-res": "0.15.4",
     "dotenv": "16.3.1",
     "eslint": "^8.54.0",
@@ -84,22 +91,21 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "2.0.0",
+    "mock-geolocation": "1.0.11",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.5",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2",
     "vercel": "^32.5.6",
     "webpack": "^5.89.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "browserslist": [
-    "Android >= 6",
+    "Android >= 8",
     "iOS >= 12"
   ],
-  "engines": {
-    "node": ">=16",
-    "npm": ">=9"
-  },
   "author": {
     "name": "Flumens",
     "email": "enquiries@flumens.io",
@@ -191,8 +197,9 @@
       "@typescript-eslint/no-var-requires": 0,
       "no-restricted-exports": 0,
       "default-param-last": 0,
+      "no-param-reassign": 0,
       "@typescript-eslint/no-this-alias": 0,
-      "@getify/proper-arrows/name": 2
+      "@getify/proper-arrows/name": 0
     }
   },
   "prettier": "@flumens/prettier-config",
